fix: replace nested Math.max/Math.min clamp with Math.clamp
Math.max(0, Math.min(1, x)) is the Java 1.0 idiom; Math.clamp(x, 0, 1)
has been available since Java 21 and we compile to Java 25. Three
sites in the ender-glow color sweep — sin() output is finite so
NaN-throws-on-min>max behavior of Math.clamp doesn't apply.

Closes #19